<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import type="android.view.View"/>

        <import type="com.rosen.convata.data.models.Conversion"/>

        <variable
            name="loadingConversions"
            type="Boolean"/>

        <variable
            name="showInstruction"
            type="Boolean"/>

        <variable
            name="baseConversions"
            type="java.util.List&lt;Conversion>" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/dimen_20dp"
        android:layout_marginVertical="@dimen/dimen_16dp"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/amountLabel"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/amount_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/amount"
                android:maxLines="1"
                android:digits="0123456789."
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            app:layout_constraintTop_toBottomOf="@+id/amountLabel"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:id="@+id/baseCurrencySpinner"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/dimen_140dp"
            android:hint="@string/currency_label">

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/baseCurrencyLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:textColor="@color/currency_label"
                tools:ignore="KeyboardInaccessibleWidget" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/currencyList"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/dimen_16dp"
            app:layout_constraintTop_toBottomOf="@+id/baseCurrencySpinner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:itemCount="6"
            app:spanCount="3"
            android:visibility="@{ (loadingConversions || showInstruction) ? View.GONE : View.VISIBLE }"
            conversions="@{ baseConversions  }"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            tools:listitem="@layout/conversion_currency_item" />

        <TextView
            android:id="@+id/loader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_16dp"
            android:text="@string/conversions_unavailable"
            android:textAlignment="center"
            android:textSize="@dimen/text_18sp"
            android:textStyle="bold"
            tools:visibility="gone"
            android:visibility="@{ showInstruction ? View.VISIBLE : View.GONE }"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:indeterminate="true"
            tools:visibility="gone"
            android:indeterminateDrawable="@drawable/loader"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="@{ loadingConversions ? View.VISIBLE : View.GONE }"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>