<resources>
    <string name="app_name">Convata</string>
    <string name="conversions_unavailable">No currency conversions for the selected amount and base currency!</string>
    <string name="currency_label">Currency</string>
    <string name="amount_label">Amount</string>
</resources>