...
    </data>

    <com.google.android.material.card.MaterialCardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/currencyCard"
        android:layout_margin="@dimen/dimen_8dp"
        app:cardCornerRadius="@dimen/dimen_6dp"
        app:cardBackgroundColor="@color/lightGrey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

...
